[gd_scene load_steps=3 format=4 uid="uid://btkx4eudjs5sm"]

[ext_resource type="Script" uid="uid://bnshv5f8bed4o" path="res://levels/level.gd" id="1_hldmh"]
[ext_resource type="TileSet" uid="uid://woxckrqp2r8f" path="res://tilesets/test_tileset.tres" id="2_gew73"]

[node name="Level" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_hldmh")
max_monsters = 2
num_heroes_to_eat = 3

[node name="FloorTiles" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAQAAAAAAAAAAAAEAAQAAAAAAAAAAAAIAAQAAAAAAAAAAAAMAAQAAAAAAAAAAAAQAAQAAAAAAAAAAAAUAAQAAAAAAAAAAAAYAAQAAAAAAAAAAAAcAAQAAAAAAAAAAAAgAAQAAAAAAAAABAAAAAQAAAAAAAAABAAEAAQAAAAAAAAABAAIAAQAAAAAAAAABAAMAAQAAAAAAAAABAAQAAQAAAAAAAAABAAUAAQAAAAAAAAABAAYAAQAAAAAAAAABAAcAAQAAAAAAAAABAAgAAQAAAAAAAAACAAAAAQAAAAAAAAACAAEAAQAAAAAAAAACAAIAAQAAAAAAAAACAAMAAQAAAAAAAAACAAQAAQAAAAAAAAACAAUAAQAAAAAAAAACAAYAAQAAAAAAAAACAAcAAQAAAAAAAAADAAAAAQAAAAAAAAADAAEAAQAAAAAAAAADAAIAAQAAAAAAAAADAAMAAQAAAAAAAAADAAQAAQAAAAAAAAADAAUAAQAAAAAAAAADAAYAAQAAAAAAAAADAAcAAQAAAAAAAAADAAgAAQAAAAAAAAAEAAAAAQAAAAAAAAAEAAEAAQAAAAAAAAAEAAIAAQAAAAAAAAAEAAMAAQAAAAAAAAAEAAQAAQAAAAAAAAAEAAUAAQAAAAAAAAAEAAYAAQAAAAAAAAAEAAcAAQAAAAAAAAAEAAgAAQAAAAAAAAAFAAAAAQAAAAAAAAAFAAEAAQAAAAAAAAAFAAIAAQAAAAAAAAAFAAMAAQAAAAAAAAAFAAQAAQAAAAAAAAAFAAUAAQAAAAAAAAAFAAYAAQAAAAAAAAAFAAcAAQAAAAAAAAAFAAgAAQAAAAAAAAAGAAAAAQAAAAAAAAAGAAEAAQAAAAAAAAAGAAIAAQAAAAAAAAAGAAMAAQAAAAAAAAAGAAQAAQAAAAAAAAAGAAUAAQAAAAAAAAAGAAYAAQAAAAAAAAAGAAcAAQAAAAAAAAAGAAgAAQAAAAAAAAAHAAAAAQAAAAAAAAAHAAEAAQAAAAAAAAAHAAIAAQAAAAAAAAAHAAMAAQAAAAAAAAAHAAQAAQAAAAAAAAAHAAUAAQAAAAAAAAAHAAYAAQAAAAAAAAAHAAcAAQAAAAAAAAAHAAgAAQAAAAAAAAAIAAAAAQAAAAAAAAAIAAEAAQAAAAAAAAAIAAIAAQAAAAAAAAAIAAMAAQAAAAAAAAAIAAQAAQAAAAAAAAAIAAUAAQAAAAAAAAAIAAYAAQAAAAAAAAAIAAcAAQAAAAAAAAAIAAgAAQAAAAAAAAAJAAAAAQAAAAAAAAAJAAEAAQAAAAAAAAAJAAIAAQAAAAAAAAAJAAMAAQAAAAAAAAAJAAQAAQAAAAAAAAAJAAUAAQAAAAAAAAAJAAYAAQAAAAAAAAAJAAcAAQAAAAAAAAAJAAgAAQAAAAAAAAAKAAAAAQAAAAAAAAAKAAEAAQAAAAAAAAAKAAIAAQAAAAAAAAAKAAMAAQAAAAAAAAAKAAQAAQAAAAAAAAAKAAUAAQAAAAAAAAAKAAYAAQAAAAAAAAAKAAcAAQAAAAAAAAAKAAgAAQAAAAAAAAALAAAAAQAAAAAAAAALAAEAAQAAAAAAAAALAAIAAQAAAAAAAAALAAMAAQAAAAAAAAALAAQAAQAAAAAAAAALAAUAAQAAAAAAAAALAAYAAQAAAAAAAAALAAcAAQAAAAAAAAALAAgAAQAAAAAAAAACAAgAAQAAAAAAAAA=")
tile_set = ExtResource("2_gew73")

[node name="OtherTiles" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAABAAEAAQAAAAUAAAAEAAIAAQAAAAQAAAAJAAYAAQAAAAQAAQAKAAIAAQAAAAQAAQACAAIAAQAAAAYAAQABAAQAAQAAAAYAAAAHAAcAAQAAAAYAAAAIAAEAAQAAAAYAAAAJAAQAAQAAAAYAAQA=")
tile_set = ExtResource("2_gew73")

[node name="WallTiles" type="TileMapLayer" parent="."]
z_index = 2
z_as_relative = false
y_sort_enabled = true
tile_map_data = PackedByteArray("AAABAAAABAACAAYAAAAAAAAABAABAAIAAAAAAAEABAAHAAQAAAAAAAIABAADAAUAAAABAAIABAADAAAAAAACAAAABAADAAYAAAADAAAABAAFAAEAAAAEAAAABAACAAUAAAADAAEABAABAAYAAAAEAAEABAACAAYAAAAEAAMABAABAAAAAAABAAMABAAEAAYAAAAAAAMABAABAAIAAAAFAAIABAAEAAQAAAAFAAMABAAGAAYAAAACAAMABAAHAAAAAAACAAUABAAAAAAAAAAAAAQABAABAAMAAAAAAAUABAAHAAQAAAAAAAYABAABAAMAAAAAAAcABAAHAAQAAAAEAAYABAACAAMAAAAFAAYABAAFAAMAAAAEAAQABAAHAAYAAAAAAAgABAADAAUAAAABAAgABAAFAAAAAAACAAgABAAFAAAAAAADAAgABAAFAAAAAAAEAAgABAAFAAAAAAACAAYABAAHAAYAAAAFAAgABAAFAAAAAAAGAAgABAAFAAAAAAAHAAgABAAFAAAAAAAIAAgABAAGAAQAAAAJAAcABAAFAAAAAAAJAAUABAAFAAMAAAAJAAMABAACAAMAAAAKAAMABAACAAAAAAAKAAEABAACAAYAAAAJAAEABAABAAYAAAAJAAAABAAFAAEAAAAIAAAABAACAAYAAAAHAAAABAACAAYAAAAGAAAABAACAAYAAAAFAAAABAABAAIAAAAHAAIABAAAAAAAAAAHAAMABAAHAAYAAAAGAAUABAAAAAAAAAAGAAYABAAGAAYAAAAIAAUABAACAAMAAAAIAAcABAAEAAAAAAAKAAYABAAAAAMAAAAKAAcABAAGAAQAAAAKAAUABAABAAUAAAAFAAEABAAHAAUAAAAKAAQABAAAAAIAAAALAAMABAAGAAQAAAALAAEABAAFAAEAAAALAAIABAAAAAMAAAAKAAAABAACAAUAAAALAAAABAACAAUAAAAJAAgABAACAAUAAAAKAAgABAACAAUAAAALAAgABAACAAUAAAALAAQABAACAAUAAAALAAUABAACAAUAAAALAAYABAACAAUAAAALAAcABAACAAUAAAA=")
tile_set = ExtResource("2_gew73")
